--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
+    "@testing-library/vue": "^6.6.1",
     "@types/jsdom": "^20.0.1",
     "@types/node": "^18.11.9",
     "@vitejs/plugin-vue": "^3.2.0",
